packages/isar_generator/test/errors/id/not_long.dart
// Only int ids are allowed

import 'package:isar/isar.dart';

@Collection()
class Test {
  @Id()
  String? id;
}
